--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+# Ignore build folders
+cmake-build-debug/
+cmake-build-release/
 build/
-/submodules
+out/
+
+# Ignore CLion and CMake internal files
+.idea/
+CMakeFiles/
+CMakeCache.txt
+Makefile
+*.a
+*.o
+*.obj
+*.exe
+*.dll
+*.log
+
+# Ignore OS-specific files
+.DS_Store
+Thumbs.db
